--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,68 +1,81 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+.Button {
+  height: 30px;
+  background-color: rgb(233, 242, 220);
+  color: rgb(108, 210, 124);
+  padding: 3px 16px;
+  border: none;
+  border-radius: 5px;
+  font-size: 12px;
+  font-weight: bold;
   cursor: pointer;
-  transition: border-color 0.25s;
 }
-button:hover {
-  border-color: #646cff;
+.Button:hover {
+  background-color: rgb(231, 244, 212);
+  border: rgb(5, 16, 217) solid 1px;
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  
+.SubmitButton {
+  height: 30px;
+  background-color: rgb(215, 247, 170);
+  color: rgb(70, 173, 85);
+  padding: 3px 16px;
+  border: none;
+  border-radius: 5px;
+  font-size: 15px;
+  font-weight: bold;
+  cursor: pointer;
+}
+.SubmitButton:hover {
+  background-color: rgb(215, 247, 170);
+  border: rgb(167, 194, 105) solid 1px;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.CancelButton {
+  height: 30px;
+  background-color: rgb(225, 174, 155);
+  color: rgb(212, 69, 22);
+  padding: 3px 16px;
+  border: none;
+  border-radius: 5px;
+  font-size: 15px;
+  font-weight: bold;
+  cursor: pointer;
+}
+.CancelButton:hover {
+  background-color: rgb(225, 174, 155);
+  border: rgb(212, 162, 144) solid 1px;
+}
+
+.ButtonRow {
+  display: flex;
+  gap: 12px;
+  margin-top: 8px;
+  justify-content: center;
+}
+
+.InputAmount {
+  width: 100%;
+  border: 1.5px solid #ccc;
+  border-radius: 3px;
+  font-size: 14px;
+  color: #333;
+  background: #f9f9f9;
+}
+.InputAmount:focus {
+    background: #fff;
+}
+
+.PageWrapper {
+  background-color: #f9f9f9;
+  min-height: 100vh;
+  padding-top: 36px;
+  width: 100vw;
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
+.CenteredContent {
+  max-width: 480px;
+  margin: 0 auto;
+  padding: 0 16px;
 }
